gave gallery page overflow-x hidden to avoid horizontal scroll

--- a/css/style.css
+++ b/css/style.css
@@ -159,6 +159,11 @@
   display: flex;
 }
 
+
+.gallary{
+  overflow-x: hidden;
+}
+
 .gallaryCard img:hover{ 
 transform: translateY(10px);
 }
